feature/add-review добавил отзывы для менторов + архитектурные фиксы + правки для стабильности